feat(core): finaliza implementação de relatórios e ajustes de segurança
- feat(relatorios): Cria DTOs e endpoints para faturamento e ranking de vendas.
- feat(relatorios): Implementa queries nativas nos Repositories de Pagamento e Item.
- fix(security): Atualiza CORS para liberar porta 3000 e inclui perfil no LoginResponseDTO.
- fix(transaction): Adiciona @Transactional no ComandaService para integridade de dados.
- refactor(api): Atualiza MesaDashboardDTO com ID da comanda para navegação no front.
- fix(admin): Retorna status 409 Conflict ao tentar deletar mesa ocupada.